fix: improve production code quality for release readiness
- Replace eprintln! with proper error handling in jni_wasi_bindings.rs
- Replace eprintln! with log::warn! in wast_runner.rs
- Replace .unwrap() with proper error propagation in wasi_stream_ops.rs
- Remove hardcoded local paths from build-config.env, use dynamic
  project-relative paths instead
- Update README.md: fix license (MIT→Apache 2.0), version (41→42),
  GitHub URLs, add typed fast-path examples, trim stale content